server_log_2.txt
17:17:25 [[32minfo[39m]: MySQL pool created
{
  "service": "ride-hailing-api",
  "environment": "development",
  "host": "91.204.209.6",
  "database": "masetawo_transport",
  "port": 3306,
  "socketPath": null
}
ERROR LOADING ROUTES: Identifier 'validator' has already been declared
/Users/zewedu/Desktop/Projects/transportBackEndNative/Routes/VehicleStatus.routes.js:8
const { validator } = require("../Middleware/Validator");
        ^

SyntaxError: Identifier 'validator' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1669:18)
    at Module._compile (node:internal/modules/cjs/loader:1712:20)
    at Object..js (node:internal/modules/cjs/loader:1871:10)
    at Module.load (node:internal/modules/cjs/loader:1470:32)
    at Module._load (node:internal/modules/cjs/loader:1290:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:238:24)
    at Module.require (node:internal/modules/cjs/loader:1493:12)
    at require (node:internal/modules/helpers:152:16)
    at Object.<anonymous> (/Users/zewedu/Desktop/Projects/transportBackEndNative/Routes/index.js:40:3)
